fix: fixed the alignment of the checkbox

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ form .message-btn textarea {
   margin-bottom: 5%;
   margin-top: 5%;
 }
+form .radio-btn .agree-btn {
+  text-align: left;
+  margin-left: 7%;
+}
 #radio {
   border: 1px solid #D0D5DD;
 }
@@ -255,10 +259,15 @@ form .message-btn textarea {
   }
   form .radio-btn .agree-txt {
     font-size: 14px;
-    text-align: left;
   }
   form .row .text {
     margin-right: 78%;
     text-align: left;
+  }
+  form .radio-btn {
+    text-align: left;
+  }
+  form .radio-btn .agree-btn {
+    margin-left: 6%;
   }
 }
